tests/snapshots/lib__snapshots__legacy_report@parse_spec_empty_with_filter.env_filter.snap
---
source: tests/snapshots.rs
expression: crate1/a*c
---

  × some directives had no effect

Error: 
  ⚠ 1 directives were ignored as invalid

Error: tracing_filter::legacy::InvalidTrailing

  ⚠ invalid trailing characters
   ╭────
 1 │ crate1/a*c
   ·       ────
   ╰────

