tests/snapshots/lib__snapshots__legacy_report@parse_spec_valid.env_filter.snap
---
source: tests/snapshots.rs
expression: "crate1::mod1=error,crate1::mod2,crate2=debug"
---
(no warnings)
