tests/snapshots/lib__snapshots__legacy_report@parse_spec_valid_filter.env_filter.snap
---
source: tests/snapshots.rs
expression: "crate1::mod1=error,crate1::mod2,crate2=debug/abc"
---

  × some directives had no effect

Error: 
  ⚠ 1 directives were ignored as invalid

Error: tracing_filter::legacy::InvalidLevel

  ⚠ invalid level filter specified
   ╭────
 1 │ crate1::mod1=error,crate1::mod2,crate2=debug/abc
   ·                                        ─────────
   ╰────
  help: valid level filters are OFF, ERROR, WARN, INFO, DEBUG, or TRACE

