tests/snapshots/lib__snapshots__legacy_report@regex.env_filter.snap
---
source: tests/snapshots.rs
expression: "error,hello=warn/[0-9]"
---

  × some directives had no effect

Error: 
  ⚠ 1 directives were ignored as invalid

Error: tracing_filter::legacy::InvalidLevel

  ⚠ invalid level filter specified
   ╭────
 1 │ error,hello=warn/[0-9]
   ·             ──────────
   ╰────
  help: valid level filters are OFF, ERROR, WARN, INFO, DEBUG, or TRACE

