tests/snapshots/lib__snapshots__legacy_report@target.env_filter.snap
---
source: tests/snapshots.rs
expression: "example::log::target=level"
---

  × some directives had no effect

Error: 
  ⚠ 1 directives were ignored as invalid

Error: tracing_filter::legacy::InvalidLevel

  ⚠ invalid level filter specified
   ╭────
 1 │ example::log::target=level
   ·                      ─────
   ╰────
  help: valid level filters are OFF, ERROR, WARN, INFO, DEBUG, or TRACE

