tests/snapshots/lib__snapshots__report@invalid-filter.env_filter.snap
---
source: tests/snapshots.rs
assertion_line: 73
expression: "crate::target=warn/[0-9]/"
---
tracing_filter::simple::Error::MultipleSlash

  × logging spec has too many `/`s
   ╭────
 1 │ crate::target=warn/[0-9]/
   ·                    ───┬──
   ·                       │ ╰── this `/` is not allowed ...
   ·                       ╰── ... in this regex filter
   ╰────
  help: regex filters may not contain `/`

